--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 17fa0d938
-	trimbase = 
+	trim = swri_route_util
+	base = 00633895a
+	trimbase = 17fa0d938
 	parent = upstream
 	previous = 4f5a4fb3c
