--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 6376a3a5b
-	trimbase = 
+	trim = swri_system_util
+	base = d05617d8c
+	trimbase = 6376a3a5b
 	parent = upstream
 	previous = 4f5a4fb3c
