--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 8c226bc48
-	trimbase = 
+	trim = swri_roscpp
+	base = 28da46164
+	trimbase = 8c226bc48
 	parent = upstream
 	previous = 4f5a4fb3c
