--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = aec4387ef
-	trimbase = 
+	trim = swri_prefix_tools
+	base = b628dec9d
+	trimbase = aec4387ef
 	parent = upstream
 	previous = 4f5a4fb3c
