--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 0e88041c7
-	trimbase = 
+	trim = swri_dbw_interface
+	base = 1f1ab8456
+	trimbase = 0e88041c7
 	parent = upstream
 	previous = 4f5a4fb3c
