--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 357c3ae23
-	trimbase = 
+	trim = swri_image_util
+	base = a71bdc8c4
+	trimbase = 357c3ae23
 	parent = upstream
 	previous = 4f5a4fb3c
