--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 473091567
-	trimbase = 
+	trim = swri_console_util
+	base = dade5ccb8
+	trimbase = 473091567
 	parent = upstream
 	previous = 4f5a4fb3c
