--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = a6ea5ea59
-	trimbase = 
+	trim = swri_transform_util
+	base = 7c0898ccd
+	trimbase = a6ea5ea59
 	parent = upstream
 	previous = 4f5a4fb3c
