--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 56bbf074a
-	trimbase = 
+	trim = swri_geometry_util
+	base = c347cc897
+	trimbase = 56bbf074a
 	parent = upstream
 	previous = 4f5a4fb3c
