--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 7a8125d33
-	trimbase = 
+	trim = swri_math_util
+	base = 7b989b998
+	trimbase = 7a8125d33
 	parent = upstream
 	previous = 4f5a4fb3c
