--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 00633895a
+	base = 2676b76be
 	trimbase = 
 	parent = release/foxy/swri_route_util
-	previous = 
+	previous = 00633895a
