--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 2f99ab76b
+	base = 4bff9a1e1
 	trimbase = 
 	parent = debian/foxy/swri_route_util
-	previous = 
+	previous = 2f99ab76b
