--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = fb8dad659
+	base = aa2f3b9ea
 	trimbase = 
 	parent = release/foxy/swri_serial_util
-	previous = 
+	previous = fb8dad659
