--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 3fa1b657b
+	base = 49e63f36a
 	trimbase = 
 	parent = debian/foxy/swri_serial_util
-	previous = 
+	previous = 3fa1b657b
