--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = c347cc897
+	base = 0a855c270
 	trimbase = 
 	parent = release/foxy/swri_geometry_util
-	previous = 
+	previous = c347cc897
