--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = dbb2a1b49
+	base = 3b1cf3e7a
 	trimbase = 
 	parent = debian/foxy/swri_geometry_util
-	previous = 
+	previous = dbb2a1b49
