--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = dade5ccb8
+	base = 3466b0c2d
 	trimbase = 
 	parent = release/foxy/swri_console_util
-	previous = 
+	previous = dade5ccb8
