--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 6a961e809
+	base = 5d6f560ed
 	trimbase = 
 	parent = debian/foxy/swri_console_util
-	previous = 
+	previous = 6a961e809
