--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = d05617d8c
+	base = a4f71aae3
 	trimbase = 
 	parent = release/foxy/swri_system_util
-	previous = 
+	previous = d05617d8c
