--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 6d3284915
+	base = 86064492a
 	trimbase = 
 	parent = debian/foxy/swri_system_util
-	previous = 
+	previous = 6d3284915
