--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 28da46164
+	base = 957d93544
 	trimbase = 
 	parent = release/foxy/swri_roscpp
-	previous = 
+	previous = 28da46164
