--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 3971cd591
+	base = 7dac66b7f
 	trimbase = 
 	parent = debian/foxy/swri_roscpp
-	previous = 
+	previous = 3971cd591
