--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 0b2313f38
+	base = 6239af9c7
 	trimbase = 
 	parent = release/foxy/swri_opencv_util
-	previous = 
+	previous = 0b2313f38
