--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 56e814df7
+	base = 9ce1862fb
 	trimbase = 
 	parent = debian/foxy/swri_opencv_util
-	previous = 
+	previous = 56e814df7
