--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 7b989b998
+	base = 56e889516
 	trimbase = 
 	parent = release/foxy/swri_math_util
-	previous = 
+	previous = 7b989b998
