--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 33dab4310
+	base = 8732c0513
 	trimbase = 
 	parent = debian/foxy/swri_math_util
-	previous = 
+	previous = 33dab4310
