--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = b628dec9d
+	base = 08b89b5c0
 	trimbase = 
 	parent = release/foxy/swri_prefix_tools
-	previous = 
+	previous = b628dec9d
