--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 8bdefdcb1
+	base = f747837c4
 	trimbase = 
 	parent = debian/foxy/swri_prefix_tools
-	previous = 
+	previous = 8bdefdcb1
