--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 1f1ab8456
+	base = 672180ff4
 	trimbase = 
 	parent = release/foxy/swri_dbw_interface
-	previous = 
+	previous = 1f1ab8456
