--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = a7310d806
+	base = 11eabd045
 	trimbase = 
 	parent = debian/foxy/swri_dbw_interface
-	previous = 
+	previous = a7310d806
