--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = a04de7267
+	base = 7c3fe3b8d
 	trimbase = 
 	parent = debian/foxy/swri_image_util
-	previous = 
+	previous = a04de7267
