--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_opencv_util
 	base = 25f126605
-	trimbase = 9d3aa5d7a
+	trimbase = 
 	parent = upstream
 	previous = 0f4e2c77a
