--- a/swri_transform_util/package.xml
+++ b/swri_transform_util/package.xml
@@ -1,6 +1,6 @@
-<package format="2">
+<package format="3">
   <name>swri_transform_util</name>
-  <version>2.13.2</version>
+  <version>2.13.3</version>
   <description>
 
      The swri_transform_util package contains utility functions and classes for
@@ -14,6 +14,8 @@
 
   <buildtool_depend>catkin</buildtool_depend>
   <buildtool_depend>pkg-config</buildtool_depend>
+  <buildtool_depend condition="$ROS_PYTHON_VERSION == 2">python-setuptools</buildtool_depend>
+  <buildtool_depend condition="$ROS_PYTHON_VERSION == 3">python3-setuptools</buildtool_depend>
 
   <depend>boost</depend>
   <depend>cv_bridge</depend>
