--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_opencv_util
-	base = f65140752
-	trimbase = 
+	base = d569e35e6
+	trimbase = f65140752
 	parent = upstream
 	previous = cf1508b68
