--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_serial_util
 	base = 2b810f00f
-	trimbase = 53572abaf
+	trimbase = 
 	parent = upstream
 	previous = 0f4e2c77a
