--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_serial_util
-	base = d781540a1
-	trimbase = 
+	base = 183f6365d
+	trimbase = d781540a1
 	parent = upstream
 	previous = cf1508b68
