--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_route_util
-	base = 907a42823
-	trimbase = 
+	base = c63f54dcb
+	trimbase = 907a42823
 	parent = upstream
 	previous = cf1508b68
