--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_system_util
-	base = d8ce4c8ed
-	trimbase = 
+	base = c41725911
+	trimbase = d8ce4c8ed
 	parent = upstream
 	previous = cf1508b68
