--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_rospy
-	base = 7e7a0e120
-	trimbase = 
+	base = ef139a101
+	trimbase = 7e7a0e120
 	parent = upstream
 	previous = cf1508b68
