--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_nodelet
-	base = c3722c083
-	trimbase = 
+	base = 06e8d8992
+	trimbase = c3722c083
 	parent = upstream
 	previous = cf1508b68
