--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_roscpp
-	base = 3fc6090f7
-	trimbase = 
+	base = 79fa1ee38
+	trimbase = 3fc6090f7
 	parent = upstream
 	previous = cf1508b68
