--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_prefix_tools
 	base = e1c88a6e6
-	trimbase = b1efbbd19
+	trimbase = 
 	parent = upstream
 	previous = 0f4e2c77a
