--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_prefix_tools
-	base = 4fef8a375
-	trimbase = 
+	base = ab8dc78e5
+	trimbase = 4fef8a375
 	parent = upstream
 	previous = cf1508b68
