--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_dbw_interface
 	base = 046899c88
-	trimbase = f4213108b
+	trimbase = 
 	parent = upstream
 	previous = 0f4e2c77a
