--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_dbw_interface
-	base = 0ee353820
-	trimbase = 
+	base = 72795c770
+	trimbase = 0ee353820
 	parent = upstream
 	previous = cf1508b68
