--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = marti_data_structures
 	base = 406ebdcc5
-	trimbase = 570b0e7d6
+	trimbase = 
 	parent = upstream
 	previous = 0f4e2c77a
