--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = marti_data_structures
-	base = a3e0ed88d
-	trimbase = 
+	base = 0ba809097
+	trimbase = a3e0ed88d
 	parent = upstream
 	previous = cf1508b68
