--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_image_util
 	base = 4b144437a
-	trimbase = 24ebe415b
+	trimbase = 
 	parent = upstream
 	previous = 0f4e2c77a
