--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_image_util
-	base = e988428a2
-	trimbase = 
+	base = d76f0cf7d
+	trimbase = e988428a2
 	parent = upstream
 	previous = cf1508b68
