--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_yaml_util
 	base = a0ba7f931
-	trimbase = 39e376a99
+	trimbase = 
 	parent = upstream
 	previous = 0f4e2c77a
