--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_yaml_util
-	base = 2b1c127ea
-	trimbase = 
+	base = 80b552956
+	trimbase = 2b1c127ea
 	parent = upstream
 	previous = cf1508b68
