--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_console_util
-	base = 5f311488d
-	trimbase = 
+	base = 30e5660dd
+	trimbase = 5f311488d
 	parent = upstream
 	previous = cf1508b68
