--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_transform_util
 	base = eed9d3f9a
-	trimbase = ba02e6357
+	trimbase = 
 	parent = upstream
 	previous = 0f4e2c77a
