--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_transform_util
-	base = a7c1ca82f
-	trimbase = 
+	base = 1c4c61cc4
+	trimbase = a7c1ca82f
 	parent = upstream
 	previous = cf1508b68
