--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_geometry_util
-	base = c2466fff6
-	trimbase = 
+	base = ce24bef82
+	trimbase = c2466fff6
 	parent = upstream
 	previous = cf1508b68
