--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_string_util
 	base = ed4b307f9
-	trimbase = 2513b5e40
+	trimbase = 
 	parent = upstream
 	previous = 0f4e2c77a
