--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_string_util
-	base = 2057409d1
-	trimbase = 
+	base = dec6334d6
+	trimbase = 2057409d1
 	parent = upstream
 	previous = cf1508b68
