--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_math_util
 	base = 73d1120e3
-	trimbase = 6c88cf7bd
+	trimbase = 
 	parent = upstream
 	previous = 0f4e2c77a
