--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = swri_math_util
-	base = 8968cfc70
-	trimbase = 
+	base = 70e65fa8a
+	trimbase = 8968cfc70
 	parent = upstream
 	previous = cf1508b68
