--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"2.13.2-1": ["Wed Jun 10 2020", "Marc Alban", "malban@swri.org"]}
+{"2.13.3-1": ["Fri Jun 12 2020", "Marc Alban", "malban@swri.org"], "2.13.2-1": ["Wed Jun 10 2020", "Marc Alban", "malban@swri.org"]}
